--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Get the version
         id: get_version
-        run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
+        run: echo ::set-output name=TAG::${GITHUB_REF/refs\/tags\//}
       - name: install buildx
         id: buildx
         uses: crazy-max/ghaction-docker-buildx@v1
@@ -25,5 +25,5 @@ jobs:
         run: |
           docker buildx build --push \
             --tag docker.pkg.github.com//jamesgawn/gohelloworld/gohelloworld:latest \
-            --tag docker.pkg.github.com//jamesgawn/gohelloworld/gohelloworld:${{ steps.get_version.outputs.VERSION }} \
+            --tag docker.pkg.github.com//jamesgawn/gohelloworld/gohelloworld:${{ steps.get_version.outputs.TAG }} \
             --platform linux/amd64,linux/arm/v7,linux/arm64 .
