--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           version: latest
       - name: Logging in to Docker
-        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login docker.pkg.github.com/ -u $GITHUB_ACTOR --password-stdin
+        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login docker.pkg.github.com/ -u ${{ $GITHUB_ACTOR }} --password-stdin
       - name: Publish to Registry
         run: |
           docker buildx build --push \
