Revert using github package repository because it turns out it doesn't support multi-platform images. :S

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,19 +11,15 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Get the version
-        id: get_version
-        run: echo ::set-output name=TAG::${GITHUB_REF/refs\/tags\//}
       - name: install buildx
         id: buildx
-        uses: crazy-max/ghaction-docker-buildx@v3
+        uses: crazy-max/ghaction-docker-buildx@v1
         with:
           version: latest
       - name: Logging in to Docker
-        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login docker.pkg.github.com/ -u jamesgawn --password-stdin
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
       - name: Publish to Registry
         run: |
           docker buildx build --push \
-            --tag docker.pkg.github.com/jamesgawn/gohelloworld/gohelloworld:latest \
-            --tag docker.pkg.github.com/jamesgawn/gohelloworld/gohelloworld:${{ steps.get_version.outputs.TAG }} \
+            --tag jamesgawn/gohelloworld:latest \
             --platform linux/amd64,linux/arm/v7,linux/arm64 .
